# tensor

./: stack.yaml  tensor.cabal
tests/: MultiIndex.hs  Tensor.hs
